syntax = "proto3";

package loms_v1;

option go_package = "gitlab.ozon.dev/eryndya/homework-1/loms/pkg/loms_v1;loms_v1";

import "google/protobuf/empty.proto";

service LomsV1 {
  // Создает новый заказ для пользователя из списка переданных товаров
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  // Показывает информацию по заказу
  rpc ListOrder (ListOrderRequest) returns (ListOrderResponse);
  // Помечает заказ оплаченным. Зарезервированные товары должны перейти в статус купленных.
  rpc OrderPayed (OrderPayedRequest) returns (google.protobuf.Empty);
  // Отменяет заказ, снимает резерв со всех товаров в заказе.
  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);
  // Возвращает количество товаров, которые можно купить с разных складов
  rpc Stocks (StocksRequest) returns (StocksResponse);
}

message Item {
  uint32 sku = 1;
  uint32 count = 2;
}

message CreateOrderRequest {
  int64 user = 1;
  repeated Item items = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message ListOrderRequest {
  int64 order_id = 1;
}

enum Status {
  new = 0;
  awaiting_payment = 1;
  failed = 2;
  payed = 3;
  canceled = 4;
}

message ListOrderResponse {
  Status status = 1;
  int64 user = 2;
  repeated Item items = 3;
}

message OrderPayedRequest {
  int64 order_id = 1;
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message StocksRequest {
  uint32 sku = 1;
}

message Stock {
  int64 warehouse_id = 1;
  uint64 count = 2;
}

message StocksResponse {
  repeated Stock stocks = 1;
}